--- a/CustomerPortal/appsettings.json
+++ b/CustomerPortal/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DbCustomerPortalContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CustomerPortal;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "ConnectionStrings": {
+        "DbCustomerPortalContextConnection": "Server=students-projects.cq6zrczewpu2.us-east-1.rds.amazonaws.com;Database=CindyOkino;User Id=codeboxx;Password=Codeboxx1!;"
+    }
 }
